namespace After.ISP
{
    public interface IAttack
    {
        void Attack();
    }
}