namespace After.ISP
{
    public interface IFly
    {
        void Fly();
    }
}