namespace After.ISP
{
    public interface IWalk
    {
        void Walk();
    }
}